<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryBackGround">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/content_language"
            android:textColor="@color/primaryRed"
            android:textSize="24sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:background="@color/white" />

        <TextView
            android:id="@+id/lang_all"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/all"
            android:background="@color/primaryBackGround"
            android:textColor="@color/primaryOrange"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:background="@color/primaryBackGroundLight" />

        <TextView
            android:id="@+id/lang_ben"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/bengali"
            android:textColor="@color/primaryOrange"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:background="@color/primaryBackGroundLight" />

        <TextView
            android:id="@+id/lang_hindi"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/hindi"
            android:textColor="@color/primaryOrange"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:background="@color/primaryBackGroundLight" />

        <TextView
            android:id="@+id/lang_eng"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/english"
            android:textColor="@color/primaryOrange"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:background="@color/primaryBackGroundLight" />

        <TextView
            android:id="@+id/lang_kan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/kannada"
            android:textColor="@color/primaryOrange"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:background="@color/primaryBackGroundLight" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>