<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:aapt="http://schemas.android.com/aapt"
    android:orientation="vertical"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.exoplayer2.ui.PlayerView
            android:id="@+id/player"
            android:layout_width="match_parent"
            android:layout_height="200dp">
            <ImageView
                android:layout_gravity="bottom|right|center_vertical|center_horizontal|center"
                android:id="@+id/exo_fullscreen_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:src="@drawable/full_screen"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:layout_marginEnd="20dp"/>
        </com.google.android.exoplayer2.ui.PlayerView>
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:id="@+id/playmovie_lin"
                android:background="@color/primaryBackGround"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="2dp">
                <TextView
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:id="@+id/playmovie_vdoname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"/>
                <TextView
                    android:textSize="16sp"
                    android:textColor="@color/primaryOrange"
                    android:layout_gravity="center"
                    android:id="@+id/playmovie_episeodename"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"/>
                <ImageView
                    android:layout_gravity="center"
                    android:id="@+id/playmovie_likeimg"
                    android:layout_width="wrap_content"
                    android:layout_height="27dp"
                    android:layout_marginStart="30dp"/>
                <TextView
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:id="@+id/playmovie_likecount"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:layout_marginStart="3dp"/>
                <LinearLayout
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:id="@+id/playmovie_watchtrailer"
                    android:background="@drawable/signin_button"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:foregroundGravity="right"
                    android:layout_marginStart="10dp">
                    <ImageView
                        android:layout_gravity="center"
                        android:padding="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_play_circle_24"/>
                    <TextView
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:layout_gravity="center"
                        android:padding="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/watch_trailer_now"/>
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:textSize="16sp"
                android:textColor="@color/primaryborder"
                android:layout_gravity="center"
                android:id="@+id/playmovie_description"
                android:background="@color/primaryBackGround"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/playmovie_lin"/>
            <TextView
                android:textSize="16sp"
                android:textColor="@color/primaryRed"
                android:id="@+id/playmovie_next"
                android:background="@color/primaryBackGround"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/next"
                android:layout_below="@+id/playmovie_description"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/playmovie_nextrec"
                android:background="@color/primaryBackGround"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_below="@+id/playmovie_next"/>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>
